# PulsePlan

./: .gitignore  App.tsx  CANVAS_INTEGRATION.md  CLAUDE.md  FASTAPI_MIGRATION_PLAN.md  IMPLEMENTATION_PLAN.md  PR_DESCRIPTION.md  README.md  RULES.md  TECHNICAL_SPECIFICATION.md  app.json  babel.config.js  metro.config.js  package-lock.json  package.json  polyfills.js  setup.sh  supabase_schedule_blocks.sql  tsconfig.json
backend/: .env.example  Makefile  README.md  debug_canvas_tasks.py  find_all_hidden_imports.py  find_hidden_imports.py  find_import_issues.py  main.py  pyproject.toml  requirements.txt  run_worker.py  test_briefing_system.py  test_canvas_integration.py  test_conversational_responses.py  validate_all_imports.py  verify_nlu_system.py
backend/app/core/: auth.py  (+6 more)
backend/docs/: EMAIL_SECURITY_IMPLEMENTATION.md  GMAIL_OAUTH_SECURITY_STATUS.md  LANGGRAPH_AGENT_WORKFLOWS.md  MEMORY_SYSTEM_DOCUMENTATION.md  PHASE_1_DETAILED_IMPLEMENTATION.md  PHASE_1_IMPLEMENTATION_SUMMARY.md  SECURITY.md
backend/migrations/: 001_fix_oauth_tokens_constraints.sql  002_create_nlu_prompt_logs.sql  003_add_user_roles.sql  20250128_add_user_hobbies_table.sql  20251029_pomodoro_settings_and_phases.sql  20251029_task_progress.sql  add_user_message_to_action_records.sql  create_intent_thresholds_table.sql
backend/scripts/: apply_migration.sh  apply_oauth_tokens_migration.py  run_acceptance_gate.py
backend/tests/: conftest.py  test_calendar_integration.py  test_encryption.py  test_focus_sessions.py  test_health.py  test_nlu_integration.py  test_timeblocks.py  test_workflows.py
(+1197 files in other folders)
